String programs